--- a/mediaqueries.html
+++ b/mediaqueries.html
@@ -75,7 +75,10 @@
         <li><a href="_#">Home</a></li>
         <li><a href="_#">About</a></li>
         <li><a href="_#">Contact</a></li>
+        <li><a href="_#">Services</a></li>
+        <li><a href="_#">Blog</a></li>
     </ul>
 </nav>
 </body>
 </html>
+
