--- a/navigationbar.html
+++ b/navigationbar.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="navigationbar.css">
 </head>
 <body>
     <nav>
@@ -22,3 +23,4 @@
     </nav>
 </body>
 </html>
+
