--- a/navigationbar.html
+++ b/navigationbar.html
@@ -1,26 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="navigationbar.css">
+    <title>Document</title>
 </head>
 <body>
     <nav>
-            <div class="logo">My Site</div>
-            <div claa="hamburger"><i class="fa-solid fa-bar"></i></div>
-            <div class="Menu">
-    <ul>
-        <li><a href="_#">Home</a></li>
-        <li><a href="_#">About</a></li>
-        <li><a href="_#">Contact</a></li>
-        <li><a href="_#">Services</a></li>
-    </ul>
-
-            </div>
-
+        <div class="logo">MySite</div>
+        <div class="hamburger"><i class="fa-solid fa-bars"></i></div>
+        <div class="menu">
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">services</a>
+            <a href="#">contact</a>
+        </div>
     </nav>
 </body>
 </html>
+
 
